Fix results size computation on mobile - Fix boardSize calculation (previously it was computed as "maxBoardSize") - Never hide dictionary - line-height: 1 for Button is so that label is not higher (27px) than the icon (24px)

--- a/packages/scrabble-solver/src/components/Button/Button.module.scss
+++ b/packages/scrabble-solver/src/components/Button/Button.module.scss
@@ -61,6 +61,7 @@
   display: flex;
   align-items: center;
   gap: var(--spacing--l);
+  line-height: 1;
 
 }
 
