--- a/packages/scrabble-solver/src/components/Results/Results.module.scss
+++ b/packages/scrabble-solver/src/components/Results/Results.module.scss
@@ -26,6 +26,9 @@ $row-padding-horizontal: calc(var(--spacing--m) + var(--spacing--s));
 .listContainer {
   position: absolute;
   top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
 }
 
 .list {
